# protei-itschool-2021

hello-world/: CMakeLists.txt
hello-world/src/: hello.cpp
openssl-task/: CMakeLists.txt  README.md
openssl-task/src/: main.cpp
shmem/: CMakeLists.txt  README.md
shmem/src/: common.cpp  common.hpp  recv.cpp  send.cpp  shmem.cpp  shmem.hpp
